Fix for chrome regarding height, width positioning.
Note: If your renderings seem distorted, try specifying your width and
height attributes explicitly in the <canvas> attributes, and not using
CSS.

If height and width are not specified explicitly on canvas, rather use
CSS, when drawing occurs, it assumes that the canvas either zoomed in
or out as it gives initial 300x150 then CSS kicks in and that deludes
canvas methods that zooming occured.

--- a/canvas.css
+++ b/canvas.css
@@ -23,8 +23,6 @@
   background: rgba(0,0,0,0.05);
   border: 1px solid rgba(0,0,0,0.9);
   border-radius: 4px;
-  width: 98%;
-  height: 90%;
   margin-left: 1%;
   margin-right: 1%;
 }
